foundation-objs/main/default/objects/Upsell_Top_up__c/Upsell_Top_up__c.object-meta.xml
<CustomObject>
    <label>Upsell - Top-up</label>
    <nameField>
        <label>Upsell - Top-up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upsell - Top-ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>