foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Upsell - Top-ups</relationshipLabel>
    <relationshipName>Upsell_Top_ups</relationshipName>
    <type>Lookup</type>
</CustomField>