foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Additional_Price__c.field-meta.xml
<CustomField>
    <fullName>Additional_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Additional Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>