foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance Approval In Progress</fullName>
            </value>
            <value>
                <fullName>Finance Approval Approved</fullName>
            </value>
            <value>
                <fullName>Finance Approval Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>