foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Upsell - Top-ups</relationshipLabel>
    <relationshipName>Upsell_Top_ups</relationshipName>
    <type>Lookup</type>
</CustomField>