foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Billing_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Billing_GSTIN__c</fullName>
    <label>Billing GSTIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>