foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name__c</fullName>
    <label>Billing Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>