foundation-objs/main/default/objects/Upsell_Top_up__c/fields/E_Sign_Customer_Info__c.field-meta.xml
<CustomField>
    <fullName>E_Sign_Customer_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E-Sign Customer Info</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Upsell - Top-ups</relationshipLabel>
    <relationshipName>Upsell_Top_ups</relationshipName>
    <type>Lookup</type>
</CustomField>