foundation-objs/main/default/objects/Upsell_Top_up__c/fields/E_Sign_Status__c.field-meta.xml
<CustomField>
    <fullName>E_Sign_Status__c</fullName>
    <label>E-Sign Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-Sign Request Sent</fullName>
            </value>
            <value>
                <fullName>E-Sign Unsuccessful</fullName>
            </value>
            <value>
                <fullName>E-Sign Successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>