foundation-objs/main/default/objects/Upsell_Top_up__c/fields/E_Sign_Type__c.field-meta.xml
<CustomField>
    <fullName>E_Sign_Type__c</fullName>
    <label>E-Sign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Aadhar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>