foundation-objs/main/default/objects/Upsell_Top_up__c/fields/ESign_Category__c.field-meta.xml
<CustomField>
    <fullName>ESign_Category__c</fullName>
    <label>ESign Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Sign</fullName>
            </value>
            <value>
                <fullName>Physical Sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>