foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Esign_CC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Esign_CC_Email_Address__c</fullName>
    <label>Esign CC Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>