foundation-objs/main/default/objects/Upsell_Top_up__c/fields/ESign_Completed__c.field-meta.xml
<CustomField>
    <fullName>ESign_Completed__c</fullName>
    <formula>IF(ISPICKVAL(E_Sign_Status__c , &apos;E-Sign Successful&apos;) , 1, 0 )</formula>
    <label>ESign Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>