foundation-objs/main/default/objects/Upsell_Top_up__c/fields/ESign_CTX_Status__c.field-meta.xml
<CustomField>
    <fullName>ESign_CTX_Status__c</fullName>
    <label>ESign CTX Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>