foundation-objs/main/default/objects/Upsell_Top_up__c/fields/ESign_Doc_Updated__c.field-meta.xml
<CustomField>
    <fullName>ESign_Doc_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ESign Doc Updated</label>
    <type>Checkbox</type>
</CustomField>