foundation-objs/main/default/objects/Upsell_Top_up__c/fields/ESign_Message__c.field-meta.xml
<CustomField>
    <fullName>ESign_Message__c</fullName>
    <label>ESign Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>