foundation-objs/main/default/objects/Upsell_Top_up__c/fields/isVisibleAdditionalGstin__c.field-meta.xml
<CustomField>
    <fullName>isVisibleAdditionalGstin__c</fullName>
    <formula>ISPICKVAL(Stage__c,&quot;Billing Details&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isVisibleAdditionalGstin</label>
    <type>Checkbox</type>
</CustomField>