foundation-objs/main/default/objects/Upsell_Top_up__c/fields/No_of_B2B_Sales_invoice__c.field-meta.xml
<CustomField>
    <fullName>No_of_B2B_Sales_invoice__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of B2B Sales invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>