foundation-objs/main/default/objects/Upsell_Top_up__c/fields/No_of_E_way_bill__c.field-meta.xml
<CustomField>
    <fullName>No_of_E_way_bill__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of E-way bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>