foundation-objs/main/default/objects/Upsell_Top_up__c/fields/No_of_MSME_API__c.field-meta.xml
<CustomField>
    <fullName>No_of_MSME_API__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of MSME API</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>