foundation-objs/main/default/objects/Upsell_Top_up__c/fields/No_of_PAN_verification_API_old__c.field-meta.xml
<CustomField>
    <fullName>No_of_PAN_verification_API_old__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of PAN verification API (old)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>