foundation-objs/main/default/objects/Upsell_Top_up__c/fields/No_of_PAN_Verification_with_Father_Name__c.field-meta.xml
<CustomField>
    <fullName>No_of_PAN_Verification_with_Father_Name__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of PAN Verification with Father Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>