foundation-objs/main/default/objects/Upsell_Top_up__c/fields/No_of_user_IDs__c.field-meta.xml
<CustomField>
    <fullName>No_of_user_IDs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of user IDs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>