foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Upsell - Top-ups</relationshipLabel>
    <relationshipName>Upsell_Top_ups</relationshipName>
    <type>Lookup</type>
</CustomField>