foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Order_Form_LOE_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_LOE_Number__c</fullName>
    <label>Order Form/LOE Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>