foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Order_Form_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Number__c</fullName>
    <displayFormat>U {000000}</displayFormat>
    <label>Order Form Number</label>
    <type>AutoNumber</type>
</CustomField>