foundation-objs/main/default/objects/Upsell_Top_up__c/fields/OrderForm_No__c.field-meta.xml
<CustomField>
    <fullName>OrderForm_No__c</fullName>
    <formula>Asset__r.Opportunity__r.Synced_Quote_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderForm No</label>
    <type>Text</type>
</CustomField>