foundation-objs/main/default/objects/Upsell_Top_up__c/fields/OTP_For_Electronic_Signature__c.field-meta.xml
<CustomField>
    <fullName>OTP_For_Electronic_Signature__c</fullName>
    <label>OTP For Electronic Signature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>