foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Physical_Sign_Completed__c.field-meta.xml
<CustomField>
    <fullName>Physical_Sign_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Sign Completed?</label>
    <type>Checkbox</type>
</CustomField>