foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Upsell - Top-ups</relationshipLabel>
    <relationshipName>Upsell_Top_ups</relationshipName>
    <type>Lookup</type>
</CustomField>