foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Reason_For_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Rejection__c</fullName>
    <label>Reason For Rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>