foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Request</fullName>
                <default>true</default>
                <label>New Request</label>
            </value>
            <value>
                <fullName>Billing Details</fullName>
            </value>
            <value>
                <fullName>Finance Approval</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>