foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Won</fullName>
                <default>true</default>
                <label>Closed Won</label>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>