foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Update_Company_Information__c.field-meta.xml
<CustomField>
    <fullName>Update_Company_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Company Information</label>
    <type>Checkbox</type>
</CustomField>