foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Upsell_close_date__c.field-meta.xml
<CustomField>
    <fullName>Upsell_close_date__c</fullName>
    <label>Upsell close date</label>
    <type>Date</type>
</CustomField>