foundation-objs/main/default/objects/Upsell_Top_up__c/fields/Upsell_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Upsell Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Upsell - Top-ups (Upsell Opportunity)</relationshipLabel>
    <relationshipName>Upsell_Top_ups1</relationshipName>
    <type>Lookup</type>
</CustomField>