foundation-objs/main/default/objects/Upsell_Top_up__c/validationRules/ESign_Category_Mandatory_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>ESign_Category_Mandatory_fields</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Stage__c) &amp;&amp;
ISPICKVAL(Stage__c , &apos;Finance Approval&apos;) &amp;&amp;
ISPICKVAL( ESign_Category__c  , &apos;&apos;)</errorConditionFormula>
    <errorMessage>Please enter E-Sign Category</errorMessage>
</ValidationRule>