foundation-objs/main/default/objects/Upsell_Top_up__c/validationRules/ESign_Client_Mandatory_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>ESign_Client_Mandatory_fields</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Stage__c) &amp;&amp;
ISPICKVAL(Stage__c , &apos;Finance Approval&apos;) &amp;&amp;
E_Sign_Customer_Info__c != null &amp;&amp;
(
 E_Sign_Customer_Info__r.Email == null ||
 E_Sign_Customer_Info__r.Phone == null ||
 E_Sign_Customer_Info__r.Designation__c == null
)</errorConditionFormula>
    <errorMessage>Please Enter the Email, Primary Mobile and Designation of ESign Customer contact</errorMessage>
</ValidationRule>