foundation-objs/main/default/objects/Upsell_Top_up__c/validationRules/Esign_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Esign_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Stage__c) &amp;&amp;
(ISPICKVAL(Stage__c , &apos;Closed&apos;)          &amp;&amp;  
ISPICKVAL(Sub_Stage__c,	&apos;Closed Won&apos;))   &amp;&amp;
ESign_Completed__c == 0</errorConditionFormula>
    <errorMessage>Please Get Esign Or Physical Sign</errorMessage>
</ValidationRule>