foundation-objs/main/default/objects/Upsell_Top_up__c/validationRules/Mandatory_ESign_CustomerInfo.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_ESign_CustomerInfo</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( ESign_Category__c, &apos;E-Sign&apos;) &amp;&amp;
E_Sign_Customer_Info__c = &apos;&apos;</errorConditionFormula>
    <errorMessage>Please enter E-Sign Customer Info.</errorMessage>
</ValidationRule>