foundation-objs/main/default/objects/Upsell_Top_up__c/validationRules/Mandatory_ESign_SignatureMode.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_ESign_SignatureMode</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( ESign_Category__c, &apos;E-Sign&apos;) &amp;&amp;
ISPICKVAL(  OTP_For_Electronic_Signature__c , &apos;&apos;)</errorConditionFormula>
    <errorMessage>Please enter OTP For Electronic Signature.</errorMessage>
</ValidationRule>