foundation-objs/main/default/objects/Upsell_Top_up__c/validationRules/Physical_Sign_Before_Retrigger.validationRule-meta.xml
<ValidationRule>
    <fullName>Physical_Sign_Before_Retrigger</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Retrigger_E_Sign__c) &amp;&amp;
(ISPICKVAL(Retrigger_E_Sign__c, &apos;Resend&apos;)             ||
 ISPICKVAL(Retrigger_E_Sign__c, &apos;Sent&apos;)               ||
 ISPICKVAL(Retrigger_E_Sign__c, &apos;Sent Successfully&apos;)) &amp;&amp;
 ISPICKVAL(ESign_Category__c, &apos;Physical Sign&apos;)        &amp;&amp;
 Physical_Sign_Completed__c = False</errorConditionFormula>
    <errorMessage>Complete customer sign before triggering for CTX E-sign</errorMessage>
</ValidationRule>