foundation-objs/main/default/objects/Upsell_Top_up__c/validationRules/Physical_Sign_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Physical_Sign_Check</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL( Approval_Status__c , &apos;Finance Approval Approved&apos;) &amp;&amp;
ISCHANGED( Physical_Sign_Completed__c ) &amp;&amp; Physical_Sign_Completed__c</errorConditionFormula>
    <errorDisplayField>Physical_Sign_Completed__c</errorDisplayField>
    <errorMessage>Please get it Finance approved first!</errorMessage>
</ValidationRule>